# cpp_labs

./: README.md
labwork-1-kosandron/: CMakeLists.txt  README.md  main.cpp
labwork-10-kosandron/: CMakeLists.txt  README.md  main.cpp
labwork-10-kosandron/data/: CMakeLists.txt  data.cpp  data.h
labwork-10-kosandron/output/: CMakeLists.txt  output.cpp  output.h
labwork-11-kosandron/: CMakeLists.txt  main.cpp
labwork-11-kosandron/lib/: CMakeLists.txt  lib.h
labwork-11-kosandron/tests/: CMakeLists.txt  lib_tests.cpp
labwork-12-kosandron/: CMakeLists.txt
labwork-12-kosandron/MyCoolDB/: CMakeLists.txt  Column.h  DBExeptions.h  MyCoolDB.cpp  MyCoolDB.h  splitFunctions.cpp  splitFunctions.h  table.h
labwork-12-kosandron/tests/: CMakeLists.txt  lib_tests.cpp
labwork-3-kosandron/: CMakeLists.txt  README.md  main.cpp  test.txt
labwork-3-kosandron/bmp/: CMakeLists.txt  bmp.cpp  bmp.h
labwork-3-kosandron/heap/: CMakeLists.txt  heap.cpp  heap.h
labwork-3-kosandron/parser/: CMakeLists.txt  parser.cpp  parser.h
labwork-4-kosandron/: CMakeLists.txt  README.md  main.cpp
labwork-4-kosandron/archivator/: CMakeLists.txt  archivator.cpp  archivator.h
labwork-4-kosandron/coding/: CMakeLists.txt  coding.cpp  coding.h
labwork-4-kosandron/parser/: CMakeLists.txt  parser.cpp  parser.h
labwork-5-kosandron/: CMakeLists.txt  README.md
labwork-5-kosandron/lib/: ArgParser.cpp  ArgParser.h
labwork-6-kosandron/: CMakeLists.txt  README.md
labwork-6-kosandron/example/: config.omfl
labwork-6-kosandron/lib/: CMakeLists.txt  parser.cpp  parser.h  valid_value.cpp  valid_value.h
labwork-6-kosandron/tests/: CMakeLists.txt  test_format.cpp  test_parser.cpp
labwork-7-kosandron/: CMakeLists.txt  main.cpp
labwork-7-kosandron/parser/: parser.cpp  parser.h
labwork-8-kosandron/: CMakeLists.txt  README.md
labwork-8-kosandron/lib/: CircularBuffer.h  CircularBufferExt.h  ConstIterator.h  Iterator.h
labwork-8-kosandron/tests/: CMakeLists.txt  CircularBuffer_tests.cpp
labwork-9-kosandron/: CMakeLists.txt  README.md  main.cpp
labwork-9-kosandron/allocator/: allocator.h  pool.h
